--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 bracket-lib = "~0.8.7"
 legion = "=0.3.1"
 rand = { version = "0.8.5", features = [] }
+serde = { version = "=1.0.115", features = ["derive"] }
+ron = "=0.6.1"
