--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ legion = "=0.3.1"
 rand = { version = "0.8.5", features = [] }
 serde = { version = "=1.0.115", features = ["derive"] }
 ron = "=0.6.1"
+
+[profile.release]
+lto = "thin"
